# 1D-ARC

./: pyproject.toml
simple_arc/: data_processing.ipynb  data_processing.py
